--- a/baza wiedzy/Teoria_wyprowadzenie.ipynb
+++ b/baza wiedzy/Teoria_wyprowadzenie.ipynb
@@ -682,6 +682,15 @@
     "\n",
     "2.  **Krzywa Wyboczeniowa i Parametr Imperfekcji ($\\alpha$):**\n",
     "    Norma zakłada, że rzeczywisty słup ma wstępne wygięcia i naprężenia spawalnicze.\n",
+    "    **Czym jest $\\alpha$?**\n",
+    "    Jest to współczynnik bezwymiarowy dobierany z Tabeli 6.1 normy PN-EN 1993-1-1. Określa on, jak bardzo dany typ profilu jest wrażliwy na wyboczenie (im wyższa wartość, tym gwałtowniejszy spadek nośności).\n",
+    "\n",
+    "    Wartości $\\alpha$ dla poszczególnych krzywych wyboczeniowych:\n",
+    "    * Krzywa $a_0$: $\\alpha = 0.13$ (Profile walcowane na gorąco, stal wysokiej jakości)\n",
+    "    * Krzywa $a$: $\\alpha = 0.21$ (Profile walcowane I, H)\n",
+    "    * Krzywa $b$: $\\alpha = 0.34$ (Profile o grubszych ściankach)\n",
+    "    * **Krzywa $c$: $\\alpha = 0.49$ (Profile spawane, ceowniki, kształtowniki zimnogięte)**\n",
+    "    * Krzywa $d$: $\\alpha = 0.76$ (Profile bardzo grubościenne)\n",
     "    * W kodzie przyjęto krzywą **'c'** ($\\alpha = 0.49$).\n",
     "    * Jest to wartość zalecana dla profili spawanych (UPE + Płaskownik), które są bardziej podatne na wyboczenie niż profile walcowane.\n",
     "\n",
@@ -689,6 +698,18 @@
     "    Parametr redukujący nośność materiału ($R_e$) ze względu na ryzyko wyboczenia.\n",
     "    $$\\chi = \\frac{1}{\\Phi + \\sqrt{\\Phi^2 - \\bar{\\lambda}^2}}$$\n",
     "    Obliczany automatycznie przez funkcję `oblicz_wspolczynnik_chi`.\n",
+    "\n",
+    "#### Szczegóły matematyczne współczynnika redukcji ($\\chi$)\n",
+    "\n",
+    "Współczynnik redukcji wyboczeniowej $\\chi$ zależy od smukłości względnej $\\bar{\\lambda}$ oraz parametru $\\Phi$, który wprowadza wpływ imperfekcji (niedoskonałości).\n",
+    "\n",
+    "Wzór na parametr pomocniczy $\\Phi$:\n",
+    "$$\\Phi = 0.5 \\cdot \\left[ 1 + \\alpha \\cdot (\\bar{\\lambda} - 0.2) + \\bar{\\lambda}^2 \\right]$$\n",
+    "\n",
+    "Gdzie:\n",
+    "* $\\bar{\\lambda}$ – smukłość względna (liczona wcześniej),\n",
+    "* $0.2$ – próg graniczny (dla smukłości $\\le 0.2$ wyboczenie nie występuje),\n",
+    "* **$\\alpha$ – Parametr Imperfekcji (Imperfection Factor).**\n",
     "\n",
     "---\n",
     "\n",
@@ -977,12 +998,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3bd86054",
+   "metadata": {},
+   "source": [
+    "## 8. Analiza Deformacji (SGU - Stan Graniczny Użytkowalności)\n",
+    "\n",
+    "Oprócz nośności (SGN), kluczowym aspektem projektowania jest sztywność konstrukcji. Dla słupa podnośnika nadmierne ugięcie może prowadzić do kolizji z otoczeniem lub dyskomfortu użytkowania. Model analityczny wyznacza przemieszczenia dla schematu wspornikowego, uwzględniając złożony stan obciążenia i efekty nieswobodnego skręcania.\n",
+    "\n",
+    "### A. Ugięcie w kierunku osi słabej ($u_y$)\n",
+    "Oś słaba dla całego przekroju to oś $Y$ (pionowa w przekroju, prostopadła do środnika). Ugięcie w tym kierunku pochodzi z dwóch niezależnych źródeł, które sumujemy (superpozycja):\n",
+    "\n",
+    "1.  **Od siły poprzecznej $T_y$ (Zginanie):**\n",
+    "    Klasyczny wzór dla wspornika obciążonego siłą skupioną na końcu:\n",
+    "    $$u_{y, bend} = \\frac{T_y \\cdot L^3}{3 \\cdot E \\cdot I_{zc}}$$\n",
+    "\n",
+    "2.  **Od mimośrodu siły osiowej $F_x$:**\n",
+    "    Siła osiowa $F_x$ działa na ramieniu $e = F_{promien} - y_c$ (względem środka ciężkości). Generuje to stały moment zginający $M_{ecc} = F_x \\cdot e$ na całej długości belki. Wzór dla momentu stałego:\n",
+    "    $$u_{y, ecc} = \\frac{M_{ecc} \\cdot L^2}{2 \\cdot E \\cdot I_{zc}}$$\n",
+    "\n",
+    "**Całkowite ugięcie:** $u_{y, total} = |u_{y, bend}| + |u_{y, ecc}|$\n",
+    "\n",
+    "### B. Ugięcie w kierunku osi mocnej ($u_z$)\n",
+    "Wywołane siłą boczną $T_z$ (działającą wzdłuż osi $Z$). Jest to klasyczne zginanie wspornika względem osi $Y$:\n",
+    "$$u_{z, total} = \\frac{T_z \\cdot L^3}{3 \\cdot E \\cdot I_y}$$\n",
+    "\n",
+    "### C. Kąt skręcenia ($\\phi$) – Teoria Własowa\n",
+    "Jest to najbardziej złożony element analizy deformacji dla profili cienkościennych otwartych. Kąt skręcenia zależy od dwóch sztywności:\n",
+    "1.  **Sztywność Saint-Venanta ($G I_t$):** Odporność na \"czyste\" skręcanie.\n",
+    "2.  **Sztywność Wycinkowa ($E I_\\omega$):** Odporność na spaczenie (warping), która jest aktywowana przez blokadę deplanacji w utwierdzeniu.\n",
+    "\n",
+    "Rozwiązanie równania różniczkowego skręcania nieswobodnego dla wspornika o długości $L$, utwierdzonego na początku ($x=0$, $\\phi=0, \\phi'=0$) i obciążonego momentem skupionym $M_s$ na końcu swobodnym:\n",
+    "\n",
+    "$$\\phi(L) = \\frac{M_s}{G I_t} \\left[ L - \\frac{1}{k} \\tanh(kL) \\right]$$\n",
+    "\n",
+    "Gdzie $k$ to charakterystyka giętna pręta:\n",
+    "$$k = \\sqrt{\\frac{G I_t}{E I_\\omega}}$$\n",
+    "\n",
+    "**Interpretacja:**\n",
+    "* Człon $\\frac{M_s \\cdot L}{G I_t}$ to klasyczny kąt skręcenia dla prętów pełnych (swobodny).\n",
+    "* Człon w nawiasie kwadratowym jest zawsze mniejszy od $L$. Reprezentuje on **redukcję kąta skręcenia** (usztywnienie) wynikającą z faktu, że utwierdzenie \"trzyma\" profil i nie pozwala mu się swobodnie paczyć. Dla profili otwartych (UPE) wpływ ten jest znaczący.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 9. Walidacja: Porównanie Analityki z FEM\n",
+    "\n",
+    "Podczas weryfikacji modelu numerycznego względem analitycznego uwzględniamy różnice w definicji wyników:\n",
+    "\n",
+    "1.  **Naprężenia ($\\sigma_{VM}$):**\n",
+    "    * **Analityka:** Liczy naprężenie \"na skórze\" (punkty P1-P6), co jest wartością maksymalną (Worst Case).\n",
+    "    * **FEM:** Standardowy output (`.dat`) podaje wartości w punktach całkowania (wewnątrz elementu). Przy siatce o grubości 1 elementu wynik ten jest zaniżony. Poprawną wartość odczytujemy z mapy kolorów (węzły powierzchniowe).\n",
+    "\n",
+    "2.  **Współczynniki Bezpieczeństwa ($\\gamma_M$):**\n",
+    "    * Wynik **UR (Utilization Ratio)** w metodzie analitycznej zawiera współczynniki bezpieczeństwa materiałowego ($\\gamma_{M0}, \\gamma_{M1}$).\n",
+    "    * Wynik FEM jest fizyczny (liniowy). Aby porównać UR, stosujemy w tabeli \"Inżynierię Wsteczną\":\n",
+    "    $$UR_{FEM, equiv} \\approx \\frac{\\sigma_{FEM, max}}{R_e / \\gamma_{M0}}$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58465a8e",
+   "id": "75410f83",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Poniższy kod jest fragmentem funkcji obliczającej przemieszczenia.\n",
+    "\n",
+    "# 1. UGIĘCIE Y (Słaba oś) - Superpozycja zginania od siły poprzecznej i momentu od mimośrodu\n",
+    "# disp_uy_bending = (F * L^3) / (3 * E * I)\n",
+    "disp_uy_bending = (T_y * L_belka**3) / (3 * E_val * Izc)\n",
+    "\n",
+    "# disp_uy_eccentric = (M_stale * L^2) / (2 * E * I)\n",
+    "# Moment stały od mimośrodu siły osiowej Fx\n",
+    "moment_mimosrod = Fx * (F_promien - yc)\n",
+    "disp_uy_eccentric = (moment_mimosrod * L_belka**2) / (2 * E_val * Izc)\n",
+    "\n",
+    "# Całkowite ugięcie Y (suma modułów dla bezpieczeństwa)\n",
+    "disp_uy_total = abs(disp_uy_bending) + abs(disp_uy_eccentric)\n",
+    "\n",
+    "\n",
+    "# 2. UGIĘCIE Z (Mocna oś) - Tylko od siły bocznej Tz\n",
+    "disp_uz_total = (T_z * L_belka**3) / (3 * E_val * Iy)\n",
+    "\n",
+    "\n",
+    "# 3. KĄT SKRĘCENIA (Teoria Własowa)\n",
+    "# Parametr sztywności skrętnej k\n",
+    "k_skret = np.sqrt((G_val * It) / (E_val * Iw))\n",
+    "\n",
+    "# Wzór analityczny dla wspornika: phi = (Ms / G*It) * [L - (1/k)*tanh(k*L)]\n",
+    "# Ms - moment skręcający względem środka ścinania Ss\n",
+    "phi_rad = (Ms / (G_val * It)) * (L_belka - (1/k_skret) * np.tanh(k_skret * L_belka))\n",
+    "phi_deg = np.degrees(phi_rad)"
+   ]
   }
  ],
  "metadata": {
